# RAG-Ingestion

./: PROMPTS.md  README.md  cloudflare.env  wrangler.toml
RAG/: pyproject.toml
RAG/CloudFlare-Docs/: RAG.txt
RAG/data/text_files/: machine_learning.txt  python_intro.txt
RAG/data/vector_store/: chroma.sqlite3
RAG/data/vector_store_cf/b795a0c7-acb5-4e48-a601-fc70cfac4bf9/: index_metadata.pickle
RAG/notebook/: .env  cloudflare_embeddings_local_vectorstore.ipynb  cloudflare_vectorize_ingestion.ipynb  document.ipynb  pdf_loader.ipynb
